--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ChakSoft/sypher#readme",
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "cross-env": "^5.1.3",
     "eslint": "^4.16.0",
     "eslint-plugin-async-await": "^0.0.0",
     "eslint-plugin-babel": "^4.1.2",
